feat(counter): added another APi endpoint that publishes message to reset the counter
