# server/consumers/consumers.go
@@ -1,7 +1,7 @@
 package consumers
 
 import (
-	"fmt"
+	"encoding/json"
 	"github.com/RaymondSalim/API-server-template/config"
 	constants "github.com/RaymondSalim/API-server-template/server/constants/nsq"
 	"github.com/RaymondSalim/API-server-template/server/service"
@@ -40,20 +40,28 @@ func registerConsumer(cfg *config.AppConfig, service *service.Services, topic st
 	err = consumer.ConnectToNSQLookupd(cfg.NSQ.NSQLookupdURL)
 	if err != nil {
 		log.Panicf("failed to connect to nsqlookupd, with error: %v", err)
-
 	}
 
 	return consumer, err
 }
 
 func (h messageHandler) HandleMessage(m *nsq.Message) error {
-	fmt.Printf("%+v\n", m)
-	fmt.Printf("topic: %s, channel: %s\n", h.topic, h.channel)
+	log.Infof("handling message for topic: %s, channel: %s\n", h.topic, h.channel)
+
+	b, err := json.Marshal(m)
+	if err != nil {
+		log.Debugf("message: %+v", b)
+	}
 
 	if h.topic == constants.Topics[constants.VisitCounter] {
 		err := h.Services.CounterService.AddCounter()
 		if err != nil {
 			log.Errorf("failed to add counter with error: %v", err)
+		}
+	} else if h.topic == constants.Topics[constants.ResetCounter] {
+		err := h.Services.CounterService.ResetCounter()
+		if err != nil {
+			log.Errorf("failed to reset counter with error: %v", err)
 		}
 	}
 	return nil
